# syncFolder

./: .gitignore  CMakeLists.txt
resources/: resources.qrc
resources/tcnStyle/: style.qrc  style.qss
src/: Define.h  FileManager.cpp  FileManager.h  GlobalVar.cpp  GlobalVar.h  enum.h  main.cpp  mainThread.cpp  mainThread.h  mainwindow.cpp  mainwindow.h  stringListWdgt.cpp  stringListWdgt.h  structs.h  syncFolder.cpp  syncFolder.h  tcnStyle.cpp  tcnStyle.h  thread.cpp  thread.h  threadProcess.cpp  threadProcess.h  waitWindow.cpp  waitWindow.h  wdgCompare.cpp  wdgCompare.h
